--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,10 +145,10 @@ input, select, textarea {
   display: inline-block;
   border: solid #ccc 1px;
   margin: 0;
-  padding: 12px 20px 11px;
-  border-radius: 3px;
+  padding: 6px 10px 6px;
+  border-radius: 0;
   transition: all 0.3s;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  height: 30px;
 }
 
 input:focus, select:focus {
@@ -248,6 +248,10 @@ select::-ms-expand {
 
 .btn:focus {
   box-shadow: none;
+}
+
+.btn.disabled, .btn:disabled {
+  opacity: .35;
 }
 
 .btn i {
@@ -376,6 +380,7 @@ input[type="checkbox"].checkbox-custom, input[type="radio"].radio-custom-checkbo
   margin-top: 2px;
   text-align: center;
   float: left;
+  cursor: pointer;
 }
 
 .checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before, .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before  {
@@ -413,6 +418,10 @@ input[type="checkbox"].checkbox-custom {
   border: none;
   color: #ffb644;
   font-size: 13px;
+}
+
+.color-red {
+  color: #dc202a;
 }
 
 /*long text*/
@@ -1104,8 +1113,11 @@ header.sticky-top {
 }
 
 .modal .modal-dialog .btn-grp {
-  margin: 0 -15px;
-  padding: 0 15px;
+  padding: 12px 15px 0;
+  border-top: 1px solid #dee2e6;
+  margin: 10px -15px 0;
+  text-align: right;
+  font-size: 0;
 }
 
 .modal .modal-header {
@@ -1148,7 +1160,13 @@ header.sticky-top {
 }
 
 .modal .btn {
-  font-size: 14px;
+  font-size: 16px;
+  margin-right: 10px;
+  padding: 4px 10px;
+  line-height: 22px;
+  height: auto;
+  border: none;
+  border-radius: 2px;
 }
 
 .modal .btn.btn-gray {
@@ -3847,11 +3865,7 @@ header.sticky-top {
   border-radius: .3rem;
   outline: 0;
 }
-.super-admin-popup ul li {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
+
 .d-none {
   display: none;
 }
@@ -3894,6 +3908,41 @@ header.sticky-top {
   display: flex;
   align-items: center;
 }
+
+/*user admin*/
+.super-admin-popup h5 {
+  margin-bottom: 15px
+}
+
+.super-admin-popup .error-text {
+  font-size: 12px;
+}
+
+.super-admin-popup li > label {
+  width: 250px;
+  margin-bottom: 0;
+}
+
+.super-admin-popup li label.radio {
+  display: inline-block;
+  margin-right: 15px
+}
+
+.super-admin-popup ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.super-admin-popup ul li div {
+  width: 80%;
+}
+
+.super-admin-popup ul li select, .super-admin-popup ul li input  {
+  width: 100%;
+}
+
 
 /*mobile responsive*/
 
