User section add search user box - 31

--- a/templates/adminConsole.html
+++ b/templates/adminConsole.html
@@ -38,8 +38,7 @@
                 <span class="search-icon">
                     <i data-feather="search"></i>
                 </span>
-                <input type="search" placeholder="Search Brands" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()">
-                <i class="fa fa-times-circle"></i>
+                <input type="search" placeholder="Search Company" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()">
             </div>
         </div>
     </div>
