User section horizontal scrollbar and column width-32

--- a/templates/userAccount.html
+++ b/templates/userAccount.html
@@ -18,19 +18,11 @@
 
     <div class="black-top-menu">
         <nav class="user-menu-icons d-flex justify-content-between align-items-center">
-            <span class="welcome-text">Welcome ,</span>
+            <span class="welcome-text">Welcome, {{complete_name}}</span>
             <ul class="d-flex justify-content-between align-items-center">
                 <li class="mr-3">
                     <button class="btn btn-blue" ng-click="openAddUser()"><img class="help"
                             src="./assets/images/add-user.svg">Add New User</button>
-                </li>
-                <li class="mr-3">
-                    <button class="btn btn-blue" ng-click="toggle_search()"><img class="help"
-                            src="./assets/images/search-white.svg">Search</button>
-                </li>
-                <li>
-                    <button class="btn btn-blue" ng-click="export()"><img class="help"
-                            src="./assets/images/download.svg">Excel</button>
                 </li>
             </ul>
         </nav>
