--- a/templates/userAccount.html
+++ b/templates/userAccount.html
@@ -46,5 +46,5 @@
             </div>
         </div>
     </div>
-    <div id="gridUser" ui-grid="gridOptionsUser" ui-grid-exporter ui-grid-pagination class="grid user-grid"></div>
+    <div id="gridUser" ui-grid="gridOptionsUser" ui-grid-auto-resize ui-grid-exporter ui-grid-pagination class="grid user-grid"></div>
 </div>
