--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,6 +182,7 @@ input::-ms-clear {
 }
 
 input::placeholder {
+  font-size: 12px;
   color: #ccc;
 }
 
@@ -397,6 +398,7 @@ input[type="checkbox"].checkbox-custom {
   position: absolute;
   width: 18px;
   height: 18px;
+  cursor: pointer;
 }
 
 .radio-custom-checkbox+.radio-custom-checkbox-label:before {
@@ -1128,8 +1130,10 @@ header.sticky-top {
 }
 
 .modal .modal-header h5 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 0;
 }
 
 .modal .modal-header h3 {
@@ -1144,7 +1148,12 @@ header.sticky-top {
   opacity: 1;
   color: #fff;
   margin: 0;
-  padding: 5px 0;
+  padding: 2px 0;
+  line-height: 0;
+}
+
+.modal .close:focus {
+  outline: none;
 }
 
 .modal .close span {
@@ -3939,10 +3948,13 @@ header.sticky-top {
   width: 80%;
 }
 
+.super-admin-popup ul li div label{
+  margin-bottom: 0;
+}
+
 .super-admin-popup ul li select, .super-admin-popup ul li input  {
   width: 100%;
 }
-
 
 .user-grid-filter {
   margin: 6px 0;
@@ -3971,7 +3983,7 @@ header.sticky-top {
 .user-grid-filter .search-icon {
   width: 30px;
 }
-
+/* 
 .grid.user-grid {
   height: calc(100vh - 230px) !important;
   padding-bottom: 30px;
@@ -3993,7 +4005,7 @@ header.sticky-top {
 
 .user-grid .ui-grid-invisible {
   display: none;
-}
+} */
 
 
 /*mobile responsive*/
