--- a/templates/modals/deleteConfirm.html
+++ b/templates/modals/deleteConfirm.html
@@ -5,13 +5,11 @@
     </button>
 </div>
 <div class="modal-body">
-    <div class="grid-content" id="confirm_box">
-        <div class="align-center grid-block">
-            <p><span>Are you sure you want to delete?</span></p>
-        </div>
-        <div class="align-center grid-block">
-            <button id="cancelBtn" type="button" class="btn btn-sm btn-warning cancelBtn btn-default btnclose" ng-click="closeModal();" data-dismiss="modal" aria-label="Close">No</button>
-            <button id="applyBtn"  type="button" class="btn btn-sm btn-primary applyBtn  btn-success btnapply" ng-click="deleteUser();">Yes</button>
+    <div id="confirm_box">
+            <p ><span>Are you sure you want to delete?</span></p>
+            <div class="btn-grp">
+            <button id="cancelBtn" type="button" class="btn btn-black cancelBtn btn-default btnclose" ng-click="closeModal();" data-dismiss="modal" aria-label="Close">No</button>
+            <button id="applyBtn"  type="button" class="btn btn-blue applyBtn  btn-success btnapply" ng-click="deleteUser();">Yes</button>
         </div>
     </div>
     <div class="grid-content" id="message_box" style="display:none;">
