UI for user page popups and super user page dropdown

--- a/templates/adminConsole.html
+++ b/templates/adminConsole.html
@@ -1,4 +1,4 @@
-<div class="user-addmin-wrapper" ng-init="showUsers();">
+<div class="user-addmin-wrapper user-super-admin" ng-init="showUsers();">
     <div class="modal fade filter-data md-popup super-admin-popup" id="error_msg_anchor" tabindex="-1" role="dialog"
         aria-labelledby="error_msg_anchor">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -10,7 +10,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-center"><span id="error_msg_span"></span></p>
+                    <p class="text-center mb-0"><span id="error_msg_span"></span></p>
                 </div>
             </div>
         </div>
