--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -951,6 +951,8 @@ header.sticky-top {
   width: 20px;
   position: relative;
   margin-right: 8px;
+  height: 20px;
+  top: 3px;
 }
 
 .global-search .search-icon svg {
@@ -3758,6 +3760,7 @@ header.sticky-top {
   margin: 0;
   padding: 0;
   border-radius: 0;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, .5);
 }
 
 .setting-icon .dropdown-menu>li>a {
@@ -3899,6 +3902,7 @@ header.sticky-top {
 
 .common-dropdown a:hover {
   background: #d1d1d1;
+  color: #004978;
 }
 
 .common-dropdown a.whatsnew-visited {
@@ -3969,7 +3973,7 @@ header.sticky-top {
 
 .user-grid-filter ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -4004,6 +4008,9 @@ header.sticky-top {
   display: none;
 }
 
+.user-super-admin .setting-icon .dropdown-menu {
+  width: 210px;
+}
 
 /*mobile responsive*/
 
